gl51-master/src/test/deca/context/valid/test-validAddition.deca
{
    int b = 2;
    int c = 1;
    float a = b + c;

    int y = (b * 2) + 8;
}