gl51-master/src/test/deca/context/invalid/test-voidParameter.deca

class A{
    int meth(void param){
        return 1;
    }
}
{
    A a = new A();
    println(a.meth(2));
}